建立預告片後台管理頁面表單

--- a/css/css.css
+++ b/css/css.css
@@ -5,6 +5,13 @@ body
 	background:url(../icon/b.png);
 	font-family:微軟正黑體;
 }
+h1,h2,h3,h4{
+	margin: 0;
+	padding: 0;
+	background: #999;
+	color: white;
+}
+
 select,select option
 {
 	padding:5px;
@@ -44,12 +51,12 @@ input:focus
 	width:1022px;
 	min-height:766px;
 	border:#000 1px solid;
-	margin:30px auto 10px auto;
+	margin:10px auto 10px auto;
 }
 #top
 {
 	display:block;
-	height:100px;
+	height:80px;
 }
 #top2
 {
